refactor - semantic tagging

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -76,7 +76,7 @@
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
-              UPM - Universidad Politécnica de Madrid
+              <b>UPM</b> - Universidad Politécnica de Madrid
               <br>
               {{t('pro-experience-header-education-degree')}}
               <br>
@@ -85,7 +85,7 @@
           </paper-item>
           <paper-item>
             <div class="section">
-              RUC - Roskilde University (Erasmus)
+              <b>RUC</b> - Roskilde University (Erasmus)
               <br>
               {{t('pro-experience-header-education-degree-erasmus')}}
               <br>
@@ -98,7 +98,7 @@
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
-              BABEL
+              <b>BABEL</b>
               <br>
               {{t('pro-experience-header-jobs-dev')}} (AngularJS)
               <br>
@@ -107,7 +107,7 @@
           </paper-item>
           <paper-item>
             <div class="section">
-              BBVA - BABEL
+              <b>BBVA - BABEL</b>
               <br>
               {{t('pro-experience-header-jobs-dev')}} (Polymer)
               <br>
@@ -116,7 +116,7 @@
           </paper-item>
           <paper-item>
             <div class="section">
-              BBVA - BABEL
+              <b>BBVA - BABEL</b>
               <br>
               {{t('pro-experience-header-jobs-dev')}} (Polymer 2.0)
               <br>
