--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -11,6 +11,10 @@
         display: block;
         overflow: hidden;
       }
+      p{
+        margin: 0;
+        display: inline;
+      }
 
       .videoPosition{
         margin-left: calc(40% - 768px);
@@ -96,9 +100,9 @@
     </div>
 
     <div class="overlayContainer">
-      <span class="overlayText">
+      <p class="overlayText">
         — Hecmocer —
-      </span>
+      </p>
       <div class="skewdiv"></div>
     </div>
 
