--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -130,14 +130,14 @@
           this.appendLocale('en', 'pro-profile-about-me-1', "I'm a 22 years old passionate web developer from Spain.");
           this.appendLocale('en', 'pro-profile-about-me-2', "In 2016 I graduated in Mathematics and Computer Science");
           this.appendLocale('en', 'pro-profile-about-me-3', "In 2016 I started working as Front-end web developer in BABEL for BBVA using Polymer & Webcomponents.");
-          this.appendLocale('en', 'pro-profile-about-me-4', "Besides web development I've been also been interested in videogame programming");
+          this.appendLocale('en', 'pro-profile-about-me-4', "Besides web development I'am also interested in videogame programming");
           this.appendLocale('en', 'pro-profile-about-me-5', "I believe that travelling and meeting people from different cultures is one of the most fullfilling and enriching experiences");
 
           this.appendLocale('es', 'pro-profile-about-me-1', "Con 22 años, soy un desarrollador web apasionado de Madrid");
           this.appendLocale('es', 'pro-profile-about-me-2', "En 2016 me gradué en Matemáticas e Informática");
           this.appendLocale('es', 'pro-profile-about-me-3', "En 2016 empecé a trabajar como desarrollador web Front-end en BABEL para BBVA con Polymer & Webcomponents.");
           this.appendLocale('es', 'pro-profile-about-me-4', "Además del desarrollo web, también siento interés por la programación de videojuegos");
-          this.appendLocale('es', 'pro-profile-about-me-5', "Opino que viajar y conocer personas de diferentes culturas es una de las experiencias más enriquecedoras a nivel personal");
+          this.appendLocale('es', 'pro-profile-about-me-5', "Viajar y conocer personas de diferentes culturas a mi parecer es una de las experiencias más enriquecedoras a nivel personal");
 
           this.appendLocale('es', 'pro-profile-header', 'Sobre mi');
           this.appendLocale('en', 'pro-profile-header', 'About me');
