feat - add linkedin contact

--- a/custom_components/pro-contact.html
+++ b/custom_components/pro-contact.html
@@ -40,6 +40,9 @@
         <pro-hoverable-item icon="vaadin-icons:twitter" text="@hecmocerPro" url="https://twitter.com/HecmocerPro"></pro-hoverable-item>
       </div>
       <div class="item-container">
+        <pro-hoverable-item src="../images/linkedin.png" text="Hecmocer" url="https://www.linkedin.com/in/hecmocer"></pro-hoverable-item>
+      </div>
+      <div class="item-container">
         <pro-hoverable-item icon="vaadin-icons:edit" text="Feedback" url="{{t('pro-contact-feedback')}}"></pro-hoverable-item>
       </div>
     </div>
