--- a/custom_components/pro-hoverable-item.html
+++ b/custom_components/pro-hoverable-item.html
@@ -32,7 +32,7 @@
     </style>
 
     <span class="icon item" on-mouseover='mouseover' on-mouseout='mouseout'>
-      <iron-icon id="icon" class="icon transition" icon="{{icon}}"></iron-icon>
+      <iron-icon id="icon" class="icon transition" icon="{{icon}}" src="{{src}}"></iron-icon>
       <a href="{{url}}" target="_blank" class="anchor">{{text}}</a>
     </span>
 
@@ -49,6 +49,7 @@
           hovered: Boolean,
           text: String,
           icon: String,
+          src: String,
           url: String
         },
 
