fix - rename app-shell to pro-shell and remove serviceworker from index.html

--- a/custom_components/pro-shell.html
+++ b/custom_components/pro-shell.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+
 <link rel="import" href="../bower_components/iron-grid/iron-grid.html">
 <link rel="import" href="../custom_components/pro-welcome.html">
 <link rel="import" href="../custom_components/pro-profile.html">
@@ -7,7 +8,7 @@
 <link rel="import" href="../custom_components/pro-contact.html">
 <link rel="import" href="../custom_components/pro-footer.html">
 
-<dom-module id="app-shell">
+<dom-module id="pro-shell">
   <style>
     .sections :first-child{
       height: 100vh;
@@ -34,7 +35,7 @@
 
   <script>
     Polymer({
-      is: 'app-shell',
+      is: 'pro-shell',
 
       created: function() {
         // http://stackoverflow.com/questions/11582512/how-to-get-url-parameters-with-javascript
