fix - rename images url

--- a/custom_components/pro-places.html
+++ b/custom_components/pro-places.html
@@ -22,84 +22,84 @@
     <iron-grid current-screenformat="{{screenSize}}" class="container">
 
         <pro-place
-          image-url="../images/Rome.jpg"
+          image-url="images/Rome.jpg"
           image-info="{{t('pro-places-rome')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/Germany.jpg"
+          image-url="images/Germany.jpg"
           image-info="{{t('pro-places-germany')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/Manzanares.jpg"
+          image-url="images/Manzanares.jpg"
           image-info="{{t('pro-places-manzanares')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/Paris.jpg"
+          image-url="images/Paris.jpg"
           image-info="{{t('pro-places-paris')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/Brussels.jpg"
+          image-url="images/Brussels.jpg"
           image-info="{{t('pro-places-brussels')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/Hillerod.jpg"
+          image-url="images/Hillerod.jpg"
           image-info="{{t('pro-places-hillerod')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/Helsinki.jpg"
+          image-url="images/Helsinki.jpg"
           image-info="{{t('pro-places-helsinki')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/Stockholm.jpg"
+          image-url="images/Stockholm.jpg"
           image-info="{{t('pro-places-malmo')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/Odense.jpg"
+          image-url="images/Odense.jpg"
           image-info="{{t('pro-places-odense')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/RUC.jpg"
+          image-url="images/RUC.jpg"
           image-info="{{t('pro-places-ruc')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/London.jpg"
+          image-url="images/London.jpg"
           image-info="{{t('pro-places-london')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-place>
 
         <pro-place
-          image-url="../images/Extremadura.jpg"
+          image-url="images/Extremadura.jpg"
           image-info="{{t('pro-places-extremadura')}}"
           text="{{t('pro-places-textn')}}"
           class="xs12 s6 m4 l3">
