refactor - reordered places and jobs in descendant chronological order

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -97,11 +97,11 @@
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
-              <b>BABEL</b>
+              <b>BBVA - BABEL</b>
               <br>
-              {{t('pro-experience-header-jobs-dev')}} (AngularJS)
+              {{t('pro-experience-header-jobs-dev')}} (Polymer 2.0)
               <br>
-              02/2016 - 07/2016
+              02/2016 > {{t('pro-experience-header-jobs-currently')}}
             </div>
           </paper-item>
           <paper-item>
@@ -110,16 +110,16 @@
               <br>
               {{t('pro-experience-header-jobs-dev')}} (Polymer)
               <br>
-              07/2016 - 02/2017
+              07/2016 > 02/2017
             </div>
           </paper-item>
           <paper-item>
             <div class="section">
-              <b>BBVA - BABEL</b>
+              <b>BABEL</b>
               <br>
-              {{t('pro-experience-header-jobs-dev')}} (Polymer 2.0)
+              {{t('pro-experience-header-jobs-dev')}} (AngularJS)
               <br>
-              02/2016 - {{t('pro-experience-header-jobs-currently')}}
+              02/2016 > 07/2016
             </div>
           </paper-item>
         </paper-menu>
@@ -128,46 +128,13 @@
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
-              <iron-icon class="iron-icon" icon="hardware:desktop-windows"></iron-icon>
-              <br>
-              {{t('pro-experience-header-projects-checkers')}}
-              <br>
-              C++ ({{t('pro-experience-header-projects-checkers-type')}})
-              <br>
-              {{t('pro-experience-header-projects-checkers-season')}} 2015
-            </div>
-          </paper-item>
-          <paper-item>
-            <div class="section">
-              <iron-icon class="iron-icon" icon="hardware:desktop-windows"></iron-icon>
-              <br>
-              {{t('pro-experience-header-projects-sova')}}
-              <br>
-              C# & Jquery
-              <br>
-              {{t('pro-experience-header-projects-sova-season')}} 2015
-            </div>
-          </paper-item>
-          <paper-item>
-            <div class="section">
               <iron-icon class="iron-icon" icon="hardware:phonelink"></iron-icon>
               <br>
-              {{t('pro-experience-header-projects-babelmusic')}}
+              {{t('pro-experience-header-projects-hecmocerpro')}}
               <br>
-              HTML5, CSS3, JS
+              {{t('pro-experience-header-projects-hecmocerpro-technologies')}} & Polymer
               <br>
-              {{t('pro-experience-header-projects-babelmusic-season')}} 2016
-            </div>
-          </paper-item>
-          <paper-item>
-            <div class="section">
-              <iron-icon class="iron-icon" icon="vaadin-icons:server"></iron-icon>
-              <br>
-              {{t('pro-experience-header-projects-webbackend')}}
-              <br>
-              NodeJS & MongoDB
-              <br>
-              {{t('pro-experience-header-projects-webbackend-season')}} 2016
+              {{t('pro-experience-header-projects-hecmocerpro-season')}} 2017
             </div>
           </paper-item>
           <paper-item>
@@ -184,13 +151,46 @@
           </paper-item>
           <paper-item>
             <div class="section">
+              <iron-icon class="iron-icon" icon="vaadin-icons:server"></iron-icon>
+              <br>
+              {{t('pro-experience-header-projects-webbackend')}}
+              <br>
+              NodeJS & MongoDB
+              <br>
+              {{t('pro-experience-header-projects-webbackend-season')}} 2016
+            </div>
+          </paper-item>
+          <paper-item>
+            <div class="section">
               <iron-icon class="iron-icon" icon="hardware:phonelink"></iron-icon>
               <br>
-              {{t('pro-experience-header-projects-hecmocerpro')}}
+              {{t('pro-experience-header-projects-babelmusic')}}
               <br>
-              {{t('pro-experience-header-projects-hecmocerpro-technologies')}} & Polymer
+              HTML5, CSS3, JS
               <br>
-              {{t('pro-experience-header-projects-hecmocerpro-season')}} 2017
+              {{t('pro-experience-header-projects-babelmusic-season')}} 2016
+            </div>
+          </paper-item>
+          <paper-item>
+            <div class="section">
+              <iron-icon class="iron-icon" icon="hardware:desktop-windows"></iron-icon>
+              <br>
+              {{t('pro-experience-header-projects-sova')}}
+              <br>
+              C# & Jquery
+              <br>
+              {{t('pro-experience-header-projects-sova-season')}} 2015
+            </div>
+          </paper-item>
+          <paper-item>
+            <div class="section">
+              <iron-icon class="iron-icon" icon="hardware:desktop-windows"></iron-icon>
+              <br>
+              {{t('pro-experience-header-projects-checkers')}}
+              <br>
+              C++ ({{t('pro-experience-header-projects-checkers-type')}})
+              <br>
+              {{t('pro-experience-header-projects-checkers-season')}} 2015
             </div>
           </paper-item>
         </paper-menu>
