--- a/custom_components/pro-places.html
+++ b/custom_components/pro-places.html
@@ -141,8 +141,8 @@
           this.appendLocale('en', 'pro-places-helsinki', 'Helsinki, Finland');
           this.appendLocale('es', 'pro-places-helsinki', 'Helsinki, Finlandia');
 
-          this.appendLocale('en', 'pro-places-malmo', 'Stockholm, Sweden');
-          this.appendLocale('es', 'pro-places-malmo', 'Estocolmo, Suecia');
+          this.appendLocale('en', 'pro-places-malmo', 'Malmö, Sweden');
+          this.appendLocale('es', 'pro-places-malmo', 'Malmö, Suecia');
 
           this.appendLocale('en', 'pro-places-odense', 'Odense, Denmark');
           this.appendLocale('es', 'pro-places-odense', 'Odense, Dinamarca');
