--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -142,7 +142,7 @@
           this.appendLocale('es', 'pro-profile-about-me-4', "Además del desarrollo web, también siento interés por la programación de videojuegos.");
           this.appendLocale('es', 'pro-profile-about-me-5', "Viajar y conocer personas de diferentes culturas a mi parecer es una de las experiencias más enriquecedoras a nivel personal.");
 
-          this.appendLocale('es', 'pro-profile-header', 'Sobre mi');
+          this.appendLocale('es', 'pro-profile-header', 'Sobre mí');
           this.appendLocale('en', 'pro-profile-header', 'About me');
         },
 
